--- a/win32/bin/LuaRocks.reg.template
+++ b/win32/bin/LuaRocks.reg.template
@@ -24,30 +24,30 @@ Windows Registry Editor Version 5.00
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\DefaultIcon]
 @="<LUAROCKSPATH>lua.ico"
 
-[HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockpsec\Shell]
+[HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell]
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\Fetch]
 @="Fetch and install"
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\Fetch\Command]
-@="\"<LUAROCKSPATH>luarocksw.bat" install \"%1\" 
+@="\"<LUAROCKSPATH>luarocksw.bat\" install \"%1\"" 
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\Install]
 @="Install Lua module"
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\Install\Command]
-@="\"<LUAROCKSPATH>luarocksw.bat" make \"%1\"
+@="\"<LUAROCKSPATH>luarocksw.bat\" make \"%1\""
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\Uninstall]
-@="Install Lua module (this version)"
+@="Uninstall Lua module (this version)"
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\Uninstall\Command]
-@="\"<LUAROCKSPATH>luarocksw.bat" remove \"%1\"
+@="\"<LUAROCKSPATH>luarocksw.bat\" remove \"%1\""
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\UninstallAll]
-@="Install Lua module (all versions)"
+@="Uninstall Lua module (all versions)"
 
 [HKEY_LOCAL_MACHINE\SOFTWARE\Classes\Lua.Rockspec\Shell\UninstallAll\Command]
-@="\"<LUAROCKSPATH>luarocksw.bat" removeall \"%1\"
+@="\"<LUAROCKSPATH>luarocksw.bat\" removeall \"%1\""
 
 
