--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: c
 compiler: gcc
-script: cd test && ./testing.sh --travis
+script: cd test && ./testing.sh --travis --lua 5.2.3 && ./testing.sh --travis --lua 5.1.5
