Use a test matrix in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: c
+
 compiler: gcc
-script: cd test && ./testing.sh --travis --lua 5.2.3 && ./testing.sh --travis --lua 5.1.5
+
+env:
+  matrix:
+    - LUA_VER=5.1.5
+    - LUA_VER=5.2.3
+
+script: cd test && ./testing.sh --travis --lua $LUA_VER
