--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ env:
   matrix:
     - LUA_VER=5.1.5
     - LUA_VER=5.2.3
+    - LUA_VER=5.3.0
 
 script: cd test && ./testing.sh --travis --lua $LUA_VER
