--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ env:
     - LUA_VER=5.1.5
     - LUA_VER=5.2.4
     - LUA_VER=5.3.1
+    - LUA_VER=jit-2.0.4
 
 script: cd test && ./testing.sh --travis --lua $LUA_VER
