--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
 language: python
+
 sudo: false
+
+os:
+  - linux
+  - osx
 
 env:
   - LUA="lua=5.2"
 
 before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python3; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
+
   - pip install hererocks
   - hererocks lua_install -r^ --$LUA
   - export PATH=$PATH:$PWD/lua_install/bin # Add directory with all installed binaries to PATH
@@ -16,6 +26,7 @@ install:
   
 script:
   - busted -Xhelper travis,$LUA -t blackbox --verbose
+  - busted -Xhelper travis,$LUA,env=full -t blackbox --verbose
 
 after_success:
   - luacov-coveralls -c $TRAVIS_BUILD_DIR/new_test/luacov.config --exclude $TRAVIS_BUILD_DIR/new_test/
