Update of travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,17 @@ matrix:
     - os: linux
       env:
         - LUA="lua=5.1"
+    - os: linux
+      env:
         - LUA="lua=5.2"
+    - os: linux
+      env:
         - LUA="lua=5.3"
+    - os: linux
+      env:
         - LUA="luajit=2.0"
+    - os: linux
+      env:
         - LUA="luajit=2.1"
     - os: osx
       language: generic
