--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,7 @@ matrix:
 
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python3; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
-
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install python; fi
   - pip install hererocks
   - hererocks lua_install -r^ --$LUA
   - export PATH=$PATH:$PWD/lua_install/bin # Add directory with all installed binaries to PATH
@@ -60,7 +56,7 @@ script:
 
 after_success:
   - luacov-coveralls -c $TRAVIS_BUILD_DIR/test/luacov.config --exclude $TRAVIS_BUILD_DIR/test/
-  - $PWD/lua_install/bin/luacov -c $TRAVIS_BUILD_DIR/test/luacov.config
+  - luacov -c $TRAVIS_BUILD_DIR/test/luacov.config
   - grep "Summary" -B1 -A1000 $TRAVIS_BUILD_DIR/test/luacov.report.out
 
 notifications:
