Update of YAML files, changed coveralls for codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,8 +55,8 @@ script:
   - busted -Xhelper travis,env=full --verbose
 
 after_success:
-  - luacov-coveralls -c $TRAVIS_BUILD_DIR/test/luacov.config --exclude $TRAVIS_BUILD_DIR/test/
   - luacov -c $TRAVIS_BUILD_DIR/test/luacov.config
+  - cd $TRAVIS_BUILD_DIR/test/ && bash <(curl -s https://codecov.io/bash)
   - grep "Summary" -B1 -A1000 $TRAVIS_BUILD_DIR/test/luacov.report.out
 
 notifications:
