--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,10 +7,25 @@ environment:
 
   matrix:
   - LUA: "lua 5.1"
+    COMPILER: "msvc"
   - LUA: "lua 5.2"
+    COMPILER: "msvc"
   - LUA: "lua 5.3"
+    COMPILER: "msvc"
   - LUA: "luajit 2.0"
+    COMPILER: "msvc"
   - LUA: "luajit 2.1"
+    COMPILER: "msvc"
+  - LUA: "lua 5.1"
+    COMPILER: "mingw"
+  - LUA: "lua 5.2"
+    COMPILER: "mingw"
+  - LUA: "lua 5.3"
+    COMPILER: "mingw"
+  - LUA: "luajit 2.0"
+    COMPILER: "mingw"
+  - LUA: "luajit 2.1"
+    COMPILER: "mingw"
 
 
 init:
@@ -28,7 +43,8 @@ build_script:
   - luarocks install busted 1> NUL 2> NUL
 
 test_script:
-  - busted --lpath=.//?.lua --exclude-tags=ssh,unix,mock -Xhelper appveyor
+  - set PATH=C:\MinGW\bin;%PATH% # Add MinGW compiler to the path
+  - busted --lpath=.//?.lua --exclude-tags=ssh,unix,mock -Xhelper appveyor,%COMPILER%
 
 after_test:
   - if "%LUA%"=="lua 5.1" (luarocks show bit32 || luarocks install bit32)
