--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,23 +7,23 @@ environment:
 
   matrix:
   - LUA: "lua 5.1"
-    COMPILER: "msvc"
-  - LUA: "lua 5.2"
-    COMPILER: "msvc"
-  - LUA: "lua 5.3"
-    COMPILER: "msvc"
-  - LUA: "luajit 2.0"
-    COMPILER: "msvc"
-  - LUA: "luajit 2.1"
-    COMPILER: "msvc"
+    COMPILER: "vs"
   - LUA: "lua 5.1"
     COMPILER: "mingw"
   - LUA: "lua 5.2"
+    COMPILER: "vs"
+  - LUA: "lua 5.2"
     COMPILER: "mingw"
+  - LUA: "lua 5.3"
+    COMPILER: "vs"
   - LUA: "lua 5.3"
     COMPILER: "mingw"
   - LUA: "luajit 2.0"
+    COMPILER: "vs"
+  - LUA: "luajit 2.0"
     COMPILER: "mingw"
+  - LUA: "luajit 2.1"
+    COMPILER: "vs"
   - LUA: "luajit 2.1"
     COMPILER: "mingw"
 
@@ -36,7 +36,7 @@ init:
 before_build:
   - set PATH=C:\Python27\Scripts;%PATH% # Add directory containing 'pip' to PATH
   - pip install hererocks
-  - hererocks env --%LUA% -rlatest
+  - hererocks env --%LUA% -rlatest --target=%COMPILER%
   - call env\bin\activate
 
 build_script:
