--- a/Makefile.setup.inc
+++ b/Makefile.setup.inc
@@ -12,7 +12,7 @@ build/make.lua build/builtin.lua fetch/cvs.lua fetch/git.lua fetch/sscm.lua \
 tools/patch.lua fetch/svn.lua tools/zip.lua tools/tar.lua pack.lua type_check.lua \
 make.lua remove.lua fs.lua manif.lua add.lua deps.lua build.lua search.lua \
 show.lua manif_core.lua fetch.lua unpack.lua validate.lua cfg.lua download.lua \
-help.lua util.lua index.lua cache.lua refresh_cache.lua loader.lua \
+help.lua util.lua index.lua cache.lua refresh_cache.lua loader.lua static_flags.lua\
 admin_remove.lua fetch/hg.lua fetch/git_file.lua new_version.lua lint.lua \
 purge.lua path.lua path_cmd.lua write_rockspec.lua doc.lua upload.lua \
 upload/api.lua upload/multipart.lua fetch/git_http.lua fetch/hg_http.lua \
