--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,7 @@ build_script:
   - luarocks install busted 1> NUL 2> NUL
 
 test_script:
-  - busted --lpath=.//?.lua --exclude-tags=ssh,unix,mock -Xhelper lua_dir=%CD%/lua_install,lua_interpreter=%LUA_INTERPRETER%,appveyor,%COMPILER%
+  - busted --lpath=.//?.lua --exclude-tags=ssh,unix,mock -Xhelper lua_dir=%CD%\lua_install,lua_interpreter=%LUA_INTERPRETER%,appveyor,%COMPILER%
 
 after_test:
   - if "%LUA%"=="lua 5.1" (luarocks show bit32 || luarocks install bit32)
