--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,8 +48,8 @@ init:
 before_build:
   - set PATH=C:\Python27\Scripts;%PATH% # Add directory containing 'pip' to PATH
   - pip install hererocks
-  - hererocks env --%LUA% --luarocks @luarocks-3 --target=%COMPILER%
-  - call env\bin\activate
+  - hererocks lua_install --%LUA% --luarocks @luarocks-3 --target=%COMPILER%
+  - call lua_install\bin\activate
 
 build_script:
   - luarocks install busted 1> NUL 2> NUL
