--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,34 +8,24 @@ environment:
   matrix:
   - LUA: "lua 5.1"
     COMPILER: "vs"
-    LUA_INTERPRETER: "lua"
   - LUA: "lua 5.1"
     COMPILER: "mingw"
-    LUA_INTERPRETER: "lua"
   - LUA: "lua 5.2"
     COMPILER: "vs"
-    LUA_INTERPRETER: "lua"
   - LUA: "lua 5.2"
     COMPILER: "mingw"
-    LUA_INTERPRETER: "lua"
   - LUA: "lua 5.3"
     COMPILER: "vs"
-    LUA_INTERPRETER: "lua"
   - LUA: "lua 5.3"
     COMPILER: "mingw"
-    LUA_INTERPRETER: "lua"
   - LUA: "luajit 2.0"
     COMPILER: "vs"
-    LUA_INTERPRETER: "luajit"
   - LUA: "luajit 2.0"
     COMPILER: "mingw"
-    LUA_INTERPRETER: "luajit"
   - LUA: "luajit 2.1"
     COMPILER: "vs"
-    LUA_INTERPRETER: "luajit"
   - LUA: "luajit 2.1"
     COMPILER: "mingw"
-    LUA_INTERPRETER: "luajit"
 
 
 init:
@@ -55,7 +45,7 @@ build_script:
   - luarocks install busted 1> NUL 2> NUL
 
 test_script:
-  - busted --lpath=.//?.lua --exclude-tags=ssh,unix,mock -Xhelper lua_dir=%CD%\lua_install,lua_interpreter=%LUA_INTERPRETER%,appveyor,%COMPILER%
+  - busted --lpath=.//?.lua --exclude-tags=ssh,unix,mock -Xhelper lua_dir=%CD%\lua_install,appveyor,%COMPILER%
 
 after_test:
   - if "%LUA%"=="lua 5.1" (luarocks show bit32 || luarocks install bit32)
