Use versioned files only. (#734)
Let's take the opportunity of a new major version to make an important cleanup: getting rid of the error-prone unversioned configuration files. This drops support for:

* Unversioned config.lua -> use config-5.x.lua
* Unversioned luarocks/site_config.lua -> it always generates luarocks/core/site_config_5_x.lua
* Unversioned lib/luarocks/rocks -> it always uses lib/luarocks/rocks-5.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,8 +63,9 @@ install:
   - if [ ! -f lua_install/bin/luacov ]; then luarocks install luacov; luarocks install luacov-coveralls; fi
 
 script:
-  - busted -o gtest --verbose -Xhelper travis
-  - busted -o gtest --verbose -Xhelper travis,env=full
+  - lua -v
+  - busted -o gtest --verbose -Xhelper "lua_dir=$PWD/lua_install,travis"
+  - busted -o gtest --verbose -Xhelper "lua_dir=$PWD/lua_install,travis,env=full"
 
 after_success:
   - luacov -c $TRAVIS_BUILD_DIR/test/luacov.config
