--- a/.travis.yml
+++ b/.travis.yml
@@ -54,13 +54,13 @@ matrix:
 
 
 before_install:
-  - if [ ! -f lua_install/bin/luarocks ]; then pip install hererocks; fi
+  - if [ ! -f lua_install/bin/luarocks ]; then pip2 install hererocks; fi
   - if [ ! -f lua_install/bin/luarocks ]; then hererocks lua_install -r^ --$LUA; fi
   - export PATH=$PATH:$PWD/lua_install/bin # Add directory with all installed binaries to PATH
 
 install:
   - if [ ! -f lua_install/bin/busted ]; then luarocks install busted; fi
-  - if [ ! -f lua_install/bin/luacov ]; then luarocks install luacov; luarocks install luacov-coveralls; fi
+  - if [ ! -f lua_install/bin/luacov ]; then luarocks install cluacov; fi
 
 script:
   - lua -v
