--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
-version: 2.4.3.{build}-test
+version: 2.4.4.{build}-test
 
 shallow_clone: true
 
 environment:
-  LUAROCKS_VER: 2.4.3
+  LUAROCKS_VER: 2.4.4
 
   matrix:
   - LUA: "lua 5.1"
@@ -38,7 +38,7 @@ init:
 before_build:
   - set PATH=C:\Python27\Scripts;%PATH% # Add directory containing 'pip' to PATH
   - pip install hererocks
-  - hererocks env --%LUA% -rlatest --target=%COMPILER%
+  - hererocks env --%LUA% -r@2.4.4 --target=%COMPILER%
   - call env\bin\activate
 
 build_script:
