--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,8 @@ build_script:
   - luarocks install cluacov 1> NUL 2> NUL
 
 test_script:
-  - busted -o gtest -v --lpath=.//?.lua --exclude-tags=ssh,unix -Xhelper lua_dir=%CD%\lua_install,appveyor,%COMPILER% %FILES%
+  - busted -o gtest -v --lpath=.//?.lua --exclude-tags=ssh,unix,integration -Xhelper lua_dir=%CD%\lua_install,appveyor,%COMPILER% %FILES%
+  - busted -o gtest -v --lpath=.//?.lua --exclude-tags=ssh,unix,unit -Xhelper lua_dir=%CD%\lua_install,appveyor,%COMPILER% %FILES%
 
 after_test:
   - pip install codecov
