--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,34 +2,64 @@ version: 3.0.0.{build}-test
 
 shallow_clone: true
 
+matrix:
+  fast_finish: true
+
 environment:
   LUAROCKS_VER: 3.0.0
 
   matrix:
+  # Unit tests
   - LUA: "lua 5.1"
     COMPILER: "vs"
     FILES: ""
+    EXCLUDE: "integration"
+  - LUA: "lua 5.2"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "integration"
+  - LUA: "lua 5.3"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "integration"
+  - LUA: "luajit 2.1"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "integration"
+  # Integration tests
+  - LUA: "lua 5.1"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "unit"
+  - LUA: "lua 5.2"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "unit"
+  - LUA: "lua 5.3"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "unit"
+  - LUA: "luajit 2.1"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "unit"
+  # Build tests with MinGW
   - LUA: "lua 5.1"
     COMPILER: "mingw"
     FILES: "spec//build_spec.lua"
-  - LUA: "lua 5.2"
-    COMPILER: "vs"
-    FILES: ""
+    EXCLUDE: ""
   - LUA: "lua 5.2"
     COMPILER: "mingw"
     FILES: "spec//build_spec.lua"
-  - LUA: "lua 5.3"
-    COMPILER: "vs"
-    FILES: ""
+    EXCLUDE: ""
   - LUA: "lua 5.3"
     COMPILER: "mingw"
     FILES: "spec//build_spec.lua"
-  - LUA: "luajit 2.1"
-    COMPILER: "vs"
-    FILES: ""
+    EXCLUDE: ""
   - LUA: "luajit 2.1"
     COMPILER: "mingw"
     FILES: "spec//build_spec.lua"
+    EXCLUDE: ""
 
 init:
 # Setup Lua development/build environment
@@ -49,8 +79,7 @@ build_script:
   - luarocks install cluacov 1> NUL 2> NUL
 
 test_script:
-  - busted -o gtest -v --lpath=.//?.lua --exclude-tags=ssh,unix,integration -Xhelper lua_dir=%CD%\lua_install,appveyor,%COMPILER% %FILES%
-  - busted -o gtest -v --lpath=.//?.lua --exclude-tags=ssh,unix,unit -Xhelper lua_dir=%CD%\lua_install,appveyor,%COMPILER% %FILES%
+  - busted -o gtest -v --lpath=.//?.lua --exclude-tags=ssh,unix,%EXCLUDE% -Xhelper lua_dir=%CD%\lua_install,appveyor,%COMPILER% %FILES%
 
 after_test:
   - pip install codecov
