--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,14 @@ language: python
 cache:
   directories:
   - lua_install
-  - test/testing_cache-5.1
-  - test/testing_cache-5.2
-  - test/testing_cache-5.3
-  - test/testing_cache-2.0
-  - test/testing_cache-2.1
-  - test/testing_server-5.1
-  - test/testing_server-5.2
-  - test/testing_server-5.3
-  - test/testing_server-2.0
-  - test/testing_server-2.1
+  - testrun/testing_cache-5.1
+  - testrun/testing_cache-5.2
+  - testrun/testing_cache-5.3
+  - testrun/testing_cache-2.1
+  - testrun/testing_server-5.1
+  - testrun/testing_server-5.2
+  - testrun/testing_server-5.3
+  - testrun/testing_server-2.1
   
 unit_script: &unit_script
   - busted -o gtest --exclude-tags=git,integration --verbose -Xhelper "lua_dir=$PWD/lua_install,travis"
